<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/top_layout"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/home_page_line"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/stock_top_default_color"
                android:text="@string/protocol_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="一、总则"
                android:textColor="@color/stock_top_default_color"
                android:textSize="18sp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="@string/protocol_first_content"
                android:textColor="@color/stock_top_default_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="@string/protocol_second_content"
                android:textColor="@color/stock_top_default_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="@string/protocol_third_content"
                android:textColor="@color/stock_top_default_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="@string/protocol_forth_content"
                android:textColor="@color/stock_top_default_color"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
